# aoc2023

./: .gitignore  Cargo.toml  README.md  cookie.example  generate.sh  no_std_generate.sh  snippets.txt
.cargo/: config.toml
benchmarks/: Cargo.toml
benchmarks/benches/: day01.rs  day02.rs  day03.rs  day09.rs
day01/: Cargo.toml  rust-toolchain.toml
day01/src/: data.rs  lib.rs  main.rs
day02/: Cargo.toml  snippets.txt
day02/src/: data.rs  lib.rs  main.rs
day03/: Cargo.toml
day03/src/: data.rs  lib.rs  main.rs
day04/: Cargo.toml
day04/src/: data.rs  lib.rs  main.rs
day05/: Cargo.toml
day05/src/: data.rs  lib.rs  main.rs
day06/: Cargo.toml
day06/src/: data.rs  lib.rs  main.rs
day07/: Cargo.toml
day07/src/: data.rs  lib.rs  main.rs
day08/: Cargo.toml
day08/src/: data.rs  lib.rs  main.rs
day09/: Cargo.toml
day09/src/: better_solution.rs  data.rs  lib.rs  main.rs  static_vec.rs
day10/: Cargo.toml
day10/src/: data.rs  grid.rs  lib.rs  main.rs
no-std-day01/: Cargo.toml
no-std-day01/src/: data.rs  lib.rs  main.rs
no-std-day02/: Cargo.toml
no-std-day02/src/: data.rs  lib.rs  main.rs
no-std-day03/: Cargo.toml
no-std-day03/src/: data.rs  grid.rs  lib.rs  main.rs
no-std-template/: Cargo.toml
no-std-template/src/: data.rs  lib.rs  main.rs
template/: Cargo.toml  rust-toolchain.toml
template/src/: data.rs  lib.rs  main.rs
