[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
divan = { workspace = true }
day01 = { path = "../day01" }
no-std-day01 = { path = "../no-std-day01" }
day02 = { path = "../day02" }
no-std-day02 = { path = "../no-std-day02" }

[[bench]]
name = "day01"
path = "benches/day01.rs"
harness = false

[[bench]]
name = "day02"
path = "benches/day02.rs"
harness = false
