[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
divan = { workspace = true }
day01 = { path = "../day01" }
no-std-day01 = { path = "../no-std-day01" }
day02 = { path = "../day02" }
no-std-day02 = { path = "../no-std-day02" }
day03 = { path = "../day03" }
no-std-day03 = { path = "../no-std-day03" }
day09 = { path = "../day09" }

[[bench]]
name = "day01"
path = "benches/day01.rs"
harness = false

[[bench]]
name = "day02"
path = "benches/day02.rs"
harness = false

[[bench]]
name = "day03"
path = "benches/day03.rs"
harness = false

[[bench]]
name = "day09"
path = "benches/day09.rs"
harness = false
