[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "0.10.5"
regex = "1.10.2"
# bimap = "0.6.2"
# strum = "0.24"
# strum_macros = "0.24"
# derive-new = "0.5.9"
# num = "0.4.0"


[profile.release]
# lto="fat"
# codegen-units=1
