[package]
name = "no-std-day02"
version = "0.1.0"
authors = ["Tanguy Soubry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", default-features = false }
strum = "0.25"
strum_macros = "0.25.3"


[lints]
workspace = true
