[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Tanguy Soubry"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "0.12.0"
# regex = "1.10.2"
# bimap = "0.6.2"
# strum = "0.25"
# strum_macros = "0.25.3"
# derive-new = "0.6.0"
# num = "0.4.0"
# nom = "7.1.3"
# petgraph = "0.6.4"



[profile.release]
# lto="fat"
# codegen-units=1

[lints]
workspace = true
